--- a/css/stayle.css
+++ b/css/stayle.css
@@ -156,6 +156,10 @@ nav {
     .singer {
         width: 100%;
     }
+    .container-one
+    {
+        width: 100%;
+    }
 }
 
 /*^^^^^^ SECTION-TWO ^^^^^^*/
